--- a/index.html
+++ b/index.html
@@ -196,6 +196,13 @@
                 <div class="rin-card-part" id="article">
                     <div class="rin-card-title2 mdui-typo"><a href="#article">#</a> 文章</div>
 
+                    <a target="_blank" href="https://zhuanlan.zhihu.com/p/699919380">
+                        <div class="mdui-card rin-card rin-card-article" style="margin-bottom: 10px;">
+                            <div class="rin-article-title">Jupyter环境配置问题（切换内核）</div>
+                            <div class="rin-article-content">Conda版本正常，但是运行jupyter仍然报错。</div>
+                        </div>
+                        </a>
+
                     <a target="_blank" href="https://zhuanlan.zhihu.com/p/672480914">
                     <div class="mdui-card rin-card rin-card-article" style="margin-bottom: 10px;">
                         <div class="rin-article-title">Gitlab想导入Github仓库的时候报错</div>
