--- a/index.html
+++ b/index.html
@@ -1,22 +1,18 @@
 <!--
- * AyagawaSeirin's Page
- * Last Update: 2020-02-05
+ * Ryoshikan's Page
+ * Last Update: 2024-05-27
  * GitHub: https://github.com/Ryoshikan/
- * 主页参考 [https://owomoe.net/]
- * 此个人主页运行于GithubPages，如果你也想使用，在我的公开仓库内即可找到源码。您可以任意修改，但请注明本原作者。
+ * 此个人主页运行于GithubPages，如果你也想使用，在我的公开仓库内即可找到源码。您可以任意修改，但请注明原作者 [https://owomoe.net/]。
 -->
 <html lang="zh-CN">
 <head>
     <meta charset="utf-8">
     <title>Ryoshikan</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no">
-    <!-- <link rel="stylesheet" href="/assets/css/mdui.css"> -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/AyagawaSeirin/homepage@latest/mdui/css/mdui.min.css">
+    <link rel="stylesheet" href="/mdui/css/mdui.css" type="text/css">
     <link rel="stylesheet" href="/assets/css/main.css">
     <link rel="stylesheet" href="/assets/css/index.css">
-    <!-- <link rel="stylesheet" href="/assets/css/detaile.css"> -->
     <link rel="stylesheet" href="/assets/css/font.css">
-    <!-- <link rel="stylesheet" href="https://at.alicdn.com/t/font_1625701_q2422cy34wn.css"> -->
     <link rel="icon" href="/assets/img/logo-circle-100.png">
 </head>
 <body class="mdui-theme-primary-pink mdui-theme-accent-pink">
