feat: change logo2circle

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <div class="mdui-col-xs-12 mdui-col-md-2">
                 <div class="rin-left">
                     <div class="rin-logo">
-                        <img src="/assets/img/logo.jpg">
+                        <img src="/assets/img/logo-circle.png">
                     </div>
                     <div class="rin-left-title">Ryoshikan</div>
                     <div class="rin-left-slogan">「但行好事，莫问前程」</div>
